// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Components/Delta default 1`] = `
<div
  style={
    Object {
      "height": "100%",
      "padding": "24px",
      "width": "100%",
    }
  }
>
  <Delta
    className=""
    deltaType="POSITIVE"
    displayValue="20%"
  />
</div>
`;

exports[`Storyshots Components/Delta empty 1`] = `
<div
  style={
    Object {
      "height": "100%",
      "padding": "24px",
      "width": "100%",
    }
  }
>
  <Delta
    className=""
    deltaType="NO_CHANGE"
    displayValue="0%"
  />
</div>
`;

exports[`Storyshots Components/Delta negative 1`] = `
<div
  style={
    Object {
      "height": "100%",
      "padding": "24px",
      "width": "100%",
    }
  }
>
  <Delta
    className=""
    deltaType="NEGATIVE"
    displayValue="20%"
  />
</div>
`;

exports[`Storyshots Components/Delta slightlyNegative 1`] = `
<div
  style={
    Object {
      "height": "100%",
      "padding": "24px",
      "width": "100%",
    }
  }
>
  <Delta
    className=""
    deltaType="LOW_NEGATIVE"
    displayValue="1%"
  />
</div>
`;

exports[`Storyshots Components/Delta slightlyPositive 1`] = `
<div
  style={
    Object {
      "height": "100%",
      "padding": "24px",
      "width": "100%",
    }
  }
>
  <Delta
    className=""
    deltaType="LOW_POSITIVE"
    displayValue="1%"
  />
</div>
`;
